Added mentors details

--- a/index.html
+++ b/index.html
@@ -1164,12 +1164,13 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Bhadrak</div><br>
-					<p>
-						Prof.Soubhagya Ranjan Mahalik<br>
-
-						Subhranshu Sekhar Pati<br>
-						Saswat Samal, Rohan Kumar Mohanty, LIRON SARANGI
-					</p>
+					<ul>
+						<li>Prof.Soubhagya Ranjan Mahalik</li>
+						<li>Subhranshu Sekhar Pati(Email: <a href="mailto:c12007@iiit-bh.ac.in" target="_blank">c12007@iiit-bh.ac.in</a>)</li>
+						<li>Saswat Samal(Email: <a href="mailto:Saswat Samal	b120055@iiit-bh.ac.in" target="_blank">Saswat Samal	b120055@iiit-bh.ac.in</a>)</li>
+						<li>Rohan Kumar Mohanty(Email: <a href="mailto:b121045@iiit-bh.ac.in" target="_blank">b121045@iiit-bh.ac.in</a>)</li>
+						<li>Liron Sarangi(Email: <a href="mailto:b122065@iiit-bh.ac.in" target="_blank">b122065@iiit-bh.ac.in</a>)</li>
+					</ul><br>
 					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
@@ -1179,12 +1180,13 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Cuttack</div><br>
-					<p>
-						Prof. Anjali Mohapatra<br>
-
-						Trilochan Rout<br>
-						Muskan Sahoo, Shubank Nagar, Chirantan Beura
-					</p>
+					<ul>
+						<li>Prof. Anjali Mohapatra</li>
+						<li>Trilochan Rout(Email: <a href="mailto:c120008@iiit-bh.ac.in" target="_blank">c120008@iiit-bh.ac.in</a>)</li>
+						<li>Muskan Sahoo(Email: <a href="mailto:b120035@iiit-bh.ac.in" target="_blank">b120035@iiit-bh.ac.in</a>)</li>
+						<li>Shubank Nagar(Email: <a href="mailto:b421048@iiit-bh.ac.in" target="_blank">b421048@iiit-bh.ac.in</a>)</li>
+						<li>Chirantan  Beura(Email: <a href="mailto:b422022@iiit-bh.ac.in" target="_blank">b422022@iiit-bh.ac.in</a>)</li>
+					</ul><br>
 					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
@@ -1194,12 +1196,13 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Debagarh</div><br>
-					<p>
-						Prof. Surya Narayan Mohapatra<br>
-
-						Priya Mishra<br>
-						CV Anish, Soumesh Mohanty, Brijendra Singh
-					</p>
+					<ul>
+						<li>Prof. Surya Narayan Mohapatra</li>
+						<li>Priya Mishra(Email: <a href="mailto:c121008@iiit-bh.ac.in" target="_blank">c121008@iiit-bh.ac.in</a>)</li>
+						<li>CV Anish(Email: <a href="mailto:b120018@iiit-bh.ac.inb121058@iiit-bh.ac.in" target="_blank">b120018@iiit-bh.ac.inb121058@iiit-bh.ac.in</a>)</li>
+						<li>Soumesh Mohanty(Email: <a href="mailto:b121058@iiit-bh.ac.in" target="_blank">b121058@iiit-bh.ac.in</a>)</li>
+						<li>Brijendra Singh(Email: <a href="mailto:b122041@iiit-bh.ac.in" target="_blank">b122041@iiit-bh.ac.in</a>)</li>
+					</ul><br>
 					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
@@ -1209,12 +1212,13 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Dhenkanal</div><br>
-					<p>
-						<br>
-
-						Sagarika Patro<br>
-						Harshit Singh, Sneha Mandal, Priyadarseeny Pasayat
-					</p>
+					<ul>
+						<li>Prof. Sarthak Padhi</li>
+						<li>Sagarika Patro(Email: <a href="mailto:c121010@iiit-bh.ac.in" target="_blank">c121010@iiit-bh.ac.in</a>)</li>
+						<li>Harshit Singh(Email: <a href="mailto:b120026@iiit-bh.ac.inb121057@iiit-bh.ac.inb322037@iiit-bh.ac.in" target="_blank">b120026@iiit-bh.ac.inb121057@iiit-bh.ac.inb322037@iiit-bh.ac.in</a>)</li>
+						<li>Sneha Mandal(Email: <a href="mailto:b121057@iiit-bh.ac.inb322037@iiit-bh.ac.in" target="_blank">b121057@iiit-bh.ac.inb322037@iiit-bh.ac.in</a>)</li>
+						<li>Priyadarseeny Pasayat(Email: <a href="mailto:b322037@iiit-bh.ac.in" target="_blank">b322037@iiit-bh.ac.in</a>)</li>
+					</ul><br>
 					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
