updated district mentors till #6

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 								</div>
 							</div>
 							<div class="block-detail">
-								<span class="time">January 7th - 14th</span> 
+								<span class="time">January 2nd Week</span> 
 								<span class="topic">DISTRICT PRELIMS</span>
 								<div class="block-text">
 									<p>Building phase for the teams begin</p>
@@ -585,7 +585,7 @@
 								</div>
 							</div>
 							<div class="block-detail">
-								<span class="time">January 27th - 28th</span> 
+								<span class="time">January 3rd-4th Week</span> 
 								<span class="topic">STATE FINALS</span>
 								<div class="block-text">
 									<p>Qualified teeams from each district have to present in this round</p>
@@ -1105,11 +1105,13 @@
                 <div class="problem">
                     <div>Boudh</div><br>
 					<ul>
-						Prof. Usharani Rout<br>
-
-						Sunil Samanta Singhar<br>
-						Raj Aryan, Abhay Rajpoot, Lila Lopamudra Das
-					</ul>
+						<li>Prof. Usharani Rout</li>
+						<li>Sunil Samanta Singhar (Email: <a href="mailto:c119004@iiit-bh.ac.in" target="_blank">c119004@iiit-bh.ac.in</a>)</li>
+						<li>Raj Aryan (Email: <a href="mailto:b120048@iiit-bh.ac.in" target="_blank">b120048@iiit-bh.ac.in</a>)</li>
+						<li>Abhay Rajpoot (Email: <a href="mailto:b421003@iiit-bh.ac.in" target="_blank">b421003@iiit-bh.ac.in</a>)</li>
+						<li>Lila Lopamudra Das (Email: <a href="mailto:b122064@iiit-bh.ac.in" target="_blank">b122064@iiit-bh.ac.in</a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1119,11 +1121,13 @@
                 <div class="problem">
                     <div>Balangir</div><br>
 					<ul>
-						Prof. Rakesh Ku. Lenka<br>
-
-						Saummit Kanoongo<br>
-						Naman Goyal, Santanu Mohapatra, Swaroopdarshan Dash
-					</ul>
+						<li>Prof. Rakesh Ku. Lenka</li>
+						<li>Saummit Kanoongo (Email: <a href="mailto:c120004@iiit-bh.ac.in" target="_blank">c120004@iiit-bh.ac.in</a>)</li>
+						<li>Naman Goyal (Email: <a href="mailto:b520031@iiit-bh.ac.in" target="_blank">b520031@iiit-bh.ac.in</a>)</li>
+						<li>Santanu Mohapatra (Email: <a href="mailto:b521051@iiit-bh.ac.in" target="_blank">b521051@iiit-bh.ac.in</a>)</li>
+						<li>Swaroopdarshan Dash (Email: <a href="mailto:b122121@iiit-bh.ac.in" target="_blank">b122121@iiit-bh.ac.in</a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1132,12 +1136,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Baragarh</div><br>
-					<p>
-						Prof. Biswa Ranjan Pattnaik<br>
-
-						Sidharth Samantray<br>
-						Satyaprakash Sahoo, Dibyakant Lenka, Kaushika Dash
-					</p>
+					<ul>
+						<li>Prof. Biswa Ranjan Pattnaik</li>
+						<li>Sidharth Samantray(Email: <a href="mailto:c122005@iiit-bh.ac.in" target="_blank">c122005@iiit-bh.ac.in</a>)</li>
+						<li>Satyaprakash Sahoo(Email: <a href="mailto:b220049@iiit-bh.ac.in" target="_blank">b220049@iiit-bh.ac.in</a>)</li>
+						<li>Dibyakant Lenka(Email: <a href="mailto:b221023@iiit-bh.ac.in" target="_blank">b221023@iiit-bh.ac.in</a>)</li>
+						<li>Kaushika Dash(Email: <a href="mailto:b122060@iiit-bh.ac.in" target="_blank">b122060@iiit-bh.ac.in</a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1147,11 +1153,13 @@
                 <div class="problem">
                     <div>Baleshwar</div><br>
 					<ul>
-						Prof. Muktikanta Sahoo<br>
-
-						Subham Kumar Padhy<br>
-						Shripati Pandey, Bishmay Kumar Padhi, Aryaman Patra
-					</ul>
+						<li>Prof. Muktikanta Sahoo</li>
+						<li>Subham Kumar Padhy(Email: <a href="mailto:c120006@iiit-bh.ac.in" target="_blank">c120006@iiit-bh.ac.in</a>)</li>
+						<li>Shripati Pandey(Email: <a href="mailto:b220052@iiit-bh.ac.in" target="_blank">b220052@iiit-bh.ac.in</a>)</li>
+						<li>Bishmay Kumar Padhi(Email: <a href="mailto:b321012@iiit-bh.ac.in" target="_blank">b321012@iiit-bh.ac.in</a>)</li>
+						<li>Aryaman Patra(Email: <a href="mailto:b122026@iiit-bh.ac.in" target="_blank">b122026@iiit-bh.ac.in</a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1160,12 +1168,13 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Bhadrak</div><br>
-					<p>
-						Prof.Soubhagya Ranjan Mahalik<br>
-
-						Subhranshu Sekhar Pati<br>
-						Saswat Samal, Rohan Kumar Mohanty, LIRON SARANGI
-					</p>
+					<ul>
+						<li>Prof.Soubhagya Ranjan Mahalik</li>
+						<li>Subhranshu Sekhar Pati(Email: <a href="mailto:c12007@iiit-bh.ac.in" target="_blank">c12007@iiit-bh.ac.in</a>)</li>
+						<li>Saswat Samal(Email: <a href="mailto:b120055@iiit-bh.ac.in" target="_blank">b120055@iiit-bh.ac.in</a>)</li>
+						<li>Rohan Kumar Mohanty(Email: <a href="mailto:b121045@iiit-bh.ac.in" target="_blank">b121045@iiit-bh.ac.in</a>)</li>
+						<li>Liron Sarangi(Email: <a href="mailto:b122065@iiit-bh.ac.in" target="_blank">b122065@iiit-bh.ac.in</a>)</li>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1174,12 +1183,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Cuttack</div><br>
-					<p>
-						Prof. Anjali Mohapatra<br>
-
-						Trilochan Rout<br>
-						Muskan Sahoo, Shubank Nagar, Chirantan Beura
-					</p>
+					<ul>
+						<li>Prof. Anjali Mohapatra</li>
+						<li>Trilochan Rout(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Muskan Sahoo(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Shubank Nagar(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Chirantan Beura(Email: <a href="mailto:" target="_blank"></a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1188,12 +1199,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Debagarh</div><br>
-					<p>
-						Prof. Surya Narayan Mohapatra<br>
-
-						Priya Mishra<br>
-						CV Anish, Soumesh Mohanty, Brijendra Singh
-					</p>
+					<ul>
+						<li>Prof. Surya Narayan Mohapatra</li>
+						<li>Priya Mishra(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>CV Anish(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Soumesh Mohanty(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Brijendra Singh(Email: <a href="mailto:" target="_blank"></a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1202,12 +1215,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Dhenkanal</div><br>
-					<p>
-						<br>
-
-						Sagarika Patro<br>
-						Harshit Singh, Sneha Mandal, Priyadarseeny Pasayat
-					</p>
+					<ul>
+						<li>Prof. Sarthak Padhi</li>
+						<li>Sagarika Patro(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Harshit Singh(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Sneha Mandal(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Priyadarseeny Pasayat(Email: <a href="mailto:" target="_blank"></a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1217,11 +1232,13 @@
                 <div class="problem">
                     <div>Ganjam</div><br>
 					<ul>
-						Prof. Deepak Ku. Pati<br>
-
-						Sudhanshu Ranjan Dwibedi<br>
-						Bonthu Purnanand, Upendra, Zephania Raika
-					</ul>
+						<li>Prof. Deepak Ku. Pati</li>
+						<li>Sudhanshu Ranjan Dwibedi(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Bonthu Purnanand(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Upendra(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Zephania Raika(Email: <a href="mailto:" target="_blank"></a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1230,12 +1247,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Gajapati</div><br>
-					<p>
-						Prof. Hemanata Pati<br>
-
-						Vikash Ranjan<br>
-						Vishal Manam, P Navya Preetam Reddy, Yash Bhardwaj
-					</p>
+					<ul>
+						<li>Prof. Hemanata Pati</li>
+						<li>Vikash Ranjan(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Vishal Manam(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>P Navya Preetam Reddy(Email: <a href="mailto:" target="_blank"></a>)</li>
+						<li>Yash Bhardwaj(Email: <a href="mailto:" target="_blank"></a>)</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1244,12 +1263,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Jharsuguda</div><br>
-					<p>
-						Prof. Saroj Mishra<br>
-
-						Shantilata Palei<br>
-						B. Prithiraj, Prajna Jeet Ojha, Rupsa Pramanik
-					</p>
+					<ul>
+						<li>Prof. Saroj Mishra</li>
+						<li>Shantilata Palei</li>
+						<li>B. Prithiraj</li>
+						<li>Prajna Jeet Ojha</li>
+						<li>Rupsa Pramanik</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1258,12 +1279,14 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Jajpur</div><br>
-					<p>
-						Prof. Sabyasachi Patra<br>
-
-						Ipsita Behera<br>
-						Pranav Patel, Prince Pious Omm Prakash, Biswa Prakash Dalai
-					</p>
+					<ul>
+						<li>Prof. Sabyasachi Patra</li>
+						<li>Ipsita Behera</li>
+						<li>Pranav Patel</li>
+						<li>Prince Pious Omm Prakash</li>
+						<li>Biswa Prakash Dalai</li>
+					</ul><br>
+					<div><a href="#">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1272,12 +1295,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Jagatsinghpur</div><br>
-					<p>
+					<ul>
 						Prof. Umamani Subudhi<br>
 
 						Anita Sahoo<br>
 						Simron Bhuyan, Aditya Panda, Pradosh Preetam
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1286,12 +1309,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Khorda</div><br>
-					<p>
+					<ul>
 						Prof. Pradyut Biswal<br>Prof. Gayatri Pattnaik
 
 						Aninta Sahoo<br>
 						Simran Pattnaik, Garvisha Bansal, Rishit Parija
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1314,12 +1337,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Kalahandi</div><br>
-					<p>
+					<ul>
 						Prof. Bharati Mishra<br>
 
 						Nibedita Sahoo<br>
 						Ajay Satra Sri Sai Jakkampudi, Lavesh Saluja, Lucky Jaiswal
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1328,12 +1351,12 @@
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
                     <div>Kandhmal</div><br>
-					<p>
+					<ul>
 						Prof. Khirodh Ku. Rout<br>
 
 						Sasmita Kumari Nayak<br>
 						Aryan Sinha, Anish Mannem, Swata Swayam Dash
-					</p>
+					</ul>
                 </div>
             </div>
         </div>
@@ -1344,7 +1367,6 @@
                     <div>Koraput</div><br>
 					<ul>
 						Prof. Debani Prashad Dash<br>
-
 						Deepika Moharana<br>
 						Shubhasai Mohapatra, Soumya Ranjan Hembram, Achutananda Sahu
 					</ul>
@@ -1358,7 +1380,6 @@
                     <div>Kendrapada</div><br>
 					<ul>
 						Prof. Tushar Ranjan Sahoo<br>
-
 						Rajshree Priyadarshini<br>
 						Ankush Nigam, Rohit Kumar Swain, Anshuman Mahabhoi
 					</ul>
