--- a/index.html
+++ b/index.html
@@ -835,22 +835,22 @@
 					<div class="col-sm-12 text-center">
 						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
-								<img src="img/iiit-bh_logo.png" height="200" width="410" alt="iiit-bh">
+								<img src="img/iiit-bh_logo.png" height="200" width="200" alt="iiit-bh">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club-1 ">
-								<img src="img/govt_of_odisha.png" height="200" width="410" alt="Govt. Of Odisha">
+								<img src="img/govt_of_odisha.png" height="200" width="200" alt="Govt. Of Odisha">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2 " style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
-								<img src="img/chse_logo.png" height="200" width="410" alt="CHSE">
+								<img src="img/chse_logo.png" height="200" width="200" alt="CHSE">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
-								<img src="img/osepa_logo.jpg" height="200" width="410" alt="OSEPA">
+								<img src="img/osepa.jpg" height="200" width="200" alt="OSEPA">
 							</div>
 						</div>
 					</div>
@@ -860,19 +860,19 @@
 						TITLE PARTNERS
 					</h4>
 					<div class="col-sm-12 text-center">
-						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
-							<div class="block-club">
-								<img src="img/Google_2015_logo.svg" height="200" width="410" alt="Google">
+						<div class="col-md-2 col-sm-2">
+							<div class="block-club"  style="display: flex; justify-content: center; align-items: center;">
+								<img src="img/google.png" height="200" width="200" alt="Google">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
+						<div class="col-md-2 col-sm-2"  style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
-								<img src="img/Dell_logo_2016.svg.png" height="200" width="410" alt="DELL">
+								<img src="img/dell.png" height="200" width="200" alt="DELL">
 							</div>
 						</div>
-						<div class="col-md-2 col-sm-2" style="display: flex; justify-content: center; align-items: center;">
+						<div class="col-md-2 col-sm-2"  style="display: flex; justify-content: center; align-items: center;">
 							<div class="block-club">
-								<img src="img/IBM_logo.svg.png" height="200" width="410" alt="IBM">
+								<img src="img/ibm.png" height="200" width="200" alt="IBM">
 							</div>
 						</div>
 					</div>
@@ -1015,7 +1015,9 @@
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club-1 ">
 								<div class="title-lead">Programming Society</div>
+								<a href="https://dev-psoc.netlify.com/" target="_blank">
 								<img src="img/psoc_transparent.png" height="200" width="410" alt="PSoc">
+							</a>
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2">
