--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<p class="title-lead mt-30">Find all details about the event here: <br>
 							<h2 class="gradient-text mt-10">
 								<a class="title-lead"
-									href="https://drive.google.com/file/d/1FNxa3Vd8mcVBVtBhMZsQNIj82NSnP39O/view?usp=sharing"
+									href="https://drive.google.com/file/d/18l8u97eI6imooij9q5cCdE7s7xPkbYfd/view?usp=sharing"
 									target="_blank" style="font-size: 20px;">
 									Event Booklet
 								</a>
@@ -1045,17 +1045,23 @@
 				<div class="container ">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="gradient-text" style="font-size: 17px;">Made with 🖤 IIIT-Bhubaneswar Official Team</p>
-							<!-- <a class="gradient-text scroll">Contact us</a> -->
-							<p class="gradient-text" style="font-size: 17px;">Gothapatna, PO: Malipada, Bhubaneswar-751003, IN</p>
+							<p class="gradient-text" style="font-size: 17px;">Contact: </p>
 							<p class="gradient-text" style="font-size: 17px;">offdean@iiit-bh.ac.in</p>
 							<p class="gradient-text" style="font-size: 17px;">+91 674-2653-300</p>
+							
+							<p class="gradient-text" style="font-size: 17px;">Website credits: </p>
+							<ul class="gradient-text" style="font-size: 17px;">
+								<li>- <a href="https://www.linkedin.com/in/piyushmishra965/" target="_blank">Piyush Mishra</a></li>
+								<li>- <a href="https://www.linkedin.com/in/pranav-patel-2821b7208/" target="_blank">Pranav Patel</a></li>
+								<li>- <a href="https://www.linkedin.com/in/oyesaurav/" target="_blank">Saurav Pati</a></li>
+							</ul>
+							<!-- <a class="gradient-text scroll">Contact us</a> -->
 						</div>
 						<div class="col-md-6">
 							<ul class="block-legal">
 								<li>
 									<span>
-										<a class="gradient-text scroll" style="font-size: 17px;" href="https://drive.google.com/file/d/1FNxa3Vd8mcVBVtBhMZsQNIj82NSnP39O/view?usp=sharing" target="_blank">
+										<a class="gradient-text scroll" style="font-size: 17px;" href="https://drive.google.com/file/d/18l8u97eI6imooij9q5cCdE7s7xPkbYfd/view?usp=sharing" target="_blank">
 											Event Booklet
 										</a>
 									</span>
