google logo fixed margin

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
 					<div class="col-sm-12 text-center">
 						<div class="col-md-2 col-sm-2">
 							<div class="block-club"  style="display: flex; justify-content: center; align-items: center;">
-								<img src="img/google.png" height="200" width="200" alt="Google">
+								<img src="img/google.png" height="200" width="200" alt="Google" style="margin-top: 40px">
 							</div>
 						</div>
 						<div class="col-md-2 col-sm-2"  style="display: flex; justify-content: center; align-items: center;">
@@ -1050,7 +1050,7 @@
 							<p class="gradient-text" style="font-size: 17px;">Contact: </p>
 							<p class="gradient-text" style="font-size: 17px;">offdean@iiit-bh.ac.in</p>
 							<p class="gradient-text" style="font-size: 17px;">+91 674-2653-300</p>
-							
+
 							<p class="gradient-text" style="font-size: 17px;">Website credits: </p>
 							<ul class="gradient-text" style="font-size: 17px;">
 								<li>- <a href="https://www.linkedin.com/in/piyushmishra965/" target="_blank">Piyush Mishra</a></li>
