whatsapp links target blank added

--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
 						<li>Raj Alpha Swain (Email: <a href="mailto:b321028@iiit-bh.ac.in" target="_blank">b321028@iiit-bh.ac.in</a>)</li>
 						<li>Ayuska Choudhary (Email: <a href="mailto:b222015@iiit-bh.ac.in" target="_blank">b222015@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/GgImZCNkc8m13iGHSQeDEr" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1119,7 +1119,7 @@
 						<li>Abhay Rajpoot (Email: <a href="mailto:b421003@iiit-bh.ac.in" target="_blank">b421003@iiit-bh.ac.in</a>)</li>
 						<li>Lila Lopamudra Das (Email: <a href="mailto:b122064@iiit-bh.ac.in" target="_blank">b122064@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1135,7 +1135,7 @@
 						<li>Santanu Mohapatra (Email: <a href="mailto:b521051@iiit-bh.ac.in" target="_blank">b521051@iiit-bh.ac.in</a>)</li>
 						<li>Swaroopdarshan Dash (Email: <a href="mailto:b122121@iiit-bh.ac.in" target="_blank">b122121@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/EFfg0j8Hsn22LRr9o0zshI" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1151,7 +1151,7 @@
 						<li>Dibyakant Lenka(Email: <a href="mailto:b221023@iiit-bh.ac.in" target="_blank">b221023@iiit-bh.ac.in</a>)</li>
 						<li>Kaushika Dash(Email: <a href="mailto:b122060@iiit-bh.ac.in" target="_blank">b122060@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/DrrN5IpMK0W25DLA2dBQvT" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1167,7 +1167,7 @@
 						<li>Bishmay Kumar Padhi(Email: <a href="mailto:b321012@iiit-bh.ac.in" target="_blank">b321012@iiit-bh.ac.in</a>)</li>
 						<li>Aryaman Patra(Email: <a href="mailto:b122026@iiit-bh.ac.in" target="_blank">b122026@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1183,7 +1183,7 @@
 						<li>Rohan Kumar Mohanty(Email: <a href="mailto:b121045@iiit-bh.ac.in" target="_blank">b121045@iiit-bh.ac.in</a>)</li>
 						<li>Liron Sarangi(Email: <a href="mailto:b122065@iiit-bh.ac.in" target="_blank">b122065@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/BhXJ8JXAINqB7hmrgiSE99" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1199,7 +1199,7 @@
 						<li>Shubank Nagar(Email: <a href="mailto:b421048@iiit-bh.ac.in" target="_blank">b421048@iiit-bh.ac.in</a>)</li>
 						<li>Chirantan  Beura(Email: <a href="mailto:b422022@iiit-bh.ac.in" target="_blank">b422022@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/BsgZQh9CLwOFlfQHt2F6OQ" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1215,7 +1215,7 @@
 						<li>Soumesh Mohanty(Email: <a href="mailto:b121058@iiit-bh.ac.in" target="_blank">b121058@iiit-bh.ac.in</a>)</li>
 						<li>Brijendra Singh(Email: <a href="mailto:b122041@iiit-bh.ac.in" target="_blank">b122041@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/HnsH3eGn49lEyCGlBeV72L" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1231,7 +1231,7 @@
 						<li>Sneha Mandal(Email: <a href="mailto:b121057@iiit-bh.ac.in" target="_blank">b121057@iiit-bh.ac.in</a>)</li>
 						<li>Priyadarseeny Pasayat(Email: <a href="mailto:b322037@iiit-bh.ac.in" target="_blank">b322037@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/CHvYY7Gfy2kHHwX8sLuhuk" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1247,7 +1247,7 @@
 						<li>Upendra(Email: <a href="mailto:b121023@iiit-bh.ac.in" target="_blank">b121023@iiit-bh.ac.in</a>)</li>
 						<li>Zephaniah Raika(Email: <a href="mailto:b122133@iiit-bh.ac.in" target="_blank">b122133@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/IcjtTGEm6wiCixoUDwNPRg" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1263,7 +1263,7 @@
 						<li>P Navya Preetam Reddy(Email: <a href="mailto:b121034@iiit-bh.ac.in" target="_blank">b121034@iiit-bh.ac.in</a>)</li>
 						<li>Yash Bhardwaj(Email: <a href="mailto:b322046@iiit-bh.ac.in" target="_blank">b322046@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/Bbb5TDYco9gKH55zRfrM1r" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1279,7 +1279,7 @@
 						<li>Prajna Jeet Ojha(Email: <a href="mailto:b321056@iiit-bh.ac.in" target="_blank">b321056@iiit-bh.ac.in</a>)</li>
 						<li>Rupsa Pramanik(Email: <a href="mailto:b322039@iiit-bh.ac.in" target="_blank">b322039@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/LA0geU5aHyjLN7VG7VHIjh" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1295,7 +1295,7 @@
 						<li>Prince Pious Omm Prakash(Email: <a href="mailto:b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in" target="_blank">b221042@iiit-bh.ac.inb122039@iiit-bh.ac.in</a>)</li>
 						<li>Biswa Prakash Dalai(Email: <a href="mailto:b122039@iiit-bh.ac.in" target="_blank">b122039@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1311,7 +1311,7 @@
 						<li>Aditya Panda(Email: <a href="mailto:b221007@iiit-bh.ac.in" target="_blank">b221007@iiit-bh.ac.in</a>)</li>
 						<li>Pradosh Preetam(Email: <a href="mailto:b322034@iiit-bh.ac.in" target="_blank">b322034@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/CJZFcIZ65Vv6xwn3XQT6AZ" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1319,7 +1319,7 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Khorda</div><br>
+                    <div>Khordha</div><br>
 					<ul>
 						<li>Prof. Pradyut Biswal</li>
 						<li>Prof. Gayatri Pattnaik</li>
@@ -1328,7 +1328,7 @@
 						<li>Garvisha Bansal(Email: <a href="mailto:b221024@iiit-bh.ac.in" target="_blank">b221024@iiit-bh.ac.in</a>)</li>
 						<li>Rishit Parija(Email: <a href="mailto:b122093@iiit-bh.ac.in" target="_blank">b122093@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/Hvn6o5hp8WqF5wMmqvszOt" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1344,7 +1344,7 @@
 						<li>Roshan Dash(Email: <a href="mailto:b121046@iiit-bh.ac.in" target="_blank">b121046@iiit-bh.ac.in</a>)</li>
 						<li>Rajesh Kumar Jena(Email: <a href="mailto:b122088@iiit-bh.ac.in" target="_blank">b122088@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/CVa9Yt4Cj9aGXb5ldM6n3l" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1360,7 +1360,7 @@
 						<li>Lavesh Saluja(Email: <a href="mailto:b521032@iiit-bh.ac.in" target="_blank">b521032@iiit-bh.ac.in</a>)</li>
 						<li>Lucky Jaiswal(Email: <a href="mailto:b222027@iiit-bh.ac.in" target="_blank">b222027@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/Gll9wJfQy4kBbnblfugS3I" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1368,7 +1368,7 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Kandhmal</div><br>
+                    <div>Kandhamal</div><br>
 					<ul>
 						<li>Prof. Khirodh Ku. Rout</li>
 						<li>Sasmita Kumari Nayak(Email: <a href="mailto:c122009@iiit-bh.ac.in" target="_blank">c122009@iiit-bh.ac.in</a>)</li>
@@ -1376,7 +1376,7 @@
 						<li>Anish Mannem(Email: <a href="mailto:b521034@iiit-bh.ac.in" target="_blank">b521034@iiit-bh.ac.in</a>)</li>
 						<li>Swata Swayam Dash(Email: <a href="mailto:b522060@iiit-bh.ac.in" target="_blank">b522060@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/Lb6x211krZO0bBUGof2hrd" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1392,7 +1392,7 @@
 						<li>Soumya Ranjan Hembram(Email: <a href="mailto:b521059@iiit-bh.ac.in" target="_blank">b521059@iiit-bh.ac.in</a>)</li>
 						<li>Achutananda sahu(Email: <a href="mailto:b122005@iiit-bh.ac.in" target="_blank">b122005@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/JJmL21jFHvCLTGwNptKGxl" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1400,7 +1400,7 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Kendrapada</div><br>
+                    <div>Kendrapara</div><br>
 					<ul>
 						<li>Prof. Tushar Ranjan Sahoo</li>
 						<li>Rajshree Priyadarshini(Email: <a href="mailto:c122008@iiit-bh.ac.in" target="_blank">c122008@iiit-bh.ac.in</a>)</li>
@@ -1408,7 +1408,7 @@
 						<li>Rohit Kumar Swain(Email: <a href="mailto:b321065@iiit-bh.ac.in" target="_blank">b321065@iiit-bh.ac.in</a>)</li>
 						<li>Anshuman mahabhoi(Email: <a href="mailto:b422010@iiit-bh.ac.in" target="_blank">b422010@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/BWUqWkQRcpC7n1pszDfd9I" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1416,7 +1416,7 @@
             <div>
                 <a href="#hackathonCard" title="Close" class="modal-close">CLOSE</a>
                 <div class="problem">
-                    <div>Malkanigiri</div>
+                    <div>Malkangiri</div>
 					<br>
 					<ul>
 						<li>Prof.  Surya Prakash Singh</li>
@@ -1425,7 +1425,7 @@
 						<li>Pratik Ranjan Sahu(Email: <a href="mailto:b421034@iiit-bh.ac.in" target="_blank">b421034@iiit-bh.ac.in</a>)</li>
 						<li>Ayush Anmol(Email: <a href="mailto:b422019@iiit-bh.ac.in" target="_blank">b422019@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/GJM7XkRc0U9EfVbqoB3jNK" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1442,7 +1442,7 @@
 						<li>Priyanshu Yadav(Email: <a href="mailto:B321058@iiit-bh.ac.in" target="_blank">B321058@iiit-bh.ac.in</a>)</li>
 						<li>Mansi Swaraj(Email: <a href="mailto:b522033@iiit-bh.ac.in" target="_blank">b522033@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/DfbFLzAbaHTDqHLavD0PJO" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1459,7 +1459,7 @@
 						<li>Yash Aman Shrivastava(Email: <a href="mailto:b321077@iiit-bh.ac.in" target="_blank">b321077@iiit-bh.ac.in</a>)</li>
 						<li>Swastik Gupta(Email: <a href="mailto:b122122@iiit-bh.ac.in" target="_blank">b122122@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1476,7 +1476,7 @@
 						<li>Ayush Kumar(Email: <a href="mailto:b321046@iiit-bh.ac.in" target="_blank">b321046@iiit-bh.ac.in</a>)</li>
 						<li>Chinmaya Kumar Sahoo(Email: <a href="mailto:b122044@iiit-bh.ac.in" target="_blank">b122044@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/JSWDK0aGVBo1NYSYv4Vx7y" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1493,7 +1493,7 @@
 						<li>Pranav Swaroop Nayak(Email: <a href="mailto:b321027@iiit-bh.ac.in" target="_blank">b321027@iiit-bh.ac.in</a>)</li>
 						<li>Om Prakash Mishra(Email: <a href="mailto:b222031@iiit-bh.ac.in" target="_blank">b222031@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/JTu7LoVFKI6FNyAG78u397" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1510,7 +1510,7 @@
 						<li>Swoyam Siddharth Nayak(Email: <a href="mailto:b121065@iiit-bh.ac.in" target="_blank">b121065@iiit-bh.ac.in</a>)</li>
 						<li>Ishan Singh(Email: <a href="mailto:b122056@iiit-bh.ac.in" target="_blank">b122056@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/GxhIQhXylkS2KfyJYfag36" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1527,7 +1527,7 @@
 						<li>Trideeep Ku. Tripathi(Email: <a href="mailto:b221060@iiit-bh.ac.in" target="_blank">b221060@iiit-bh.ac.in</a>)</li>
 						<li>Yaswanth Ippili(Email: <a href="mailto:b122053@iiit-bh.ac.in" target="_blank">b122053@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1544,7 +1544,7 @@
 						<li>Debi Prasad Mohapatra(Email: <a href="mailto:b321048@iiit-bh.ac.in" target="_blank">b321048@iiit-bh.ac.in</a>)</li>	
 						<li>Harsh meena(Email: <a href="mailto:b222023@iiit-bh.ac.in" target="_blank">b222023@iiit-bh.ac.in</a>)</li>	
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/IenbOuWYEBu6UgCjArktoX" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1561,7 +1561,7 @@
 						<li>Madhav Khandelwal(Email: <a href="mailto:b221035@iiit-bh.ac.in" target="_blank">b221035@iiit-bh.ac.in</a>)</li>
 						<li>Mayank Gupta(Email: <a href="mailto:b322029@iiit-bh.ac.in" target="_blank">b322029@iiit-bh.ac.in</a>)</li>
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="https://chat.whatsapp.com/H9MQ89ta9fFLy6wlaSSy64" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
@@ -1579,7 +1579,7 @@
 						<li>Madhsmita Deep(Email: <a href="mailto:b322026@iiit-bh.ac.in" target="_blank">b322026@iiit-bh.ac.in</a>)</li>
 
 					</ul><br>
-					<div><a href="#">WhatsApp group link</a></div>
+					<div><a href="#" target="_blank">WhatsApp group link</a></div>
                 </div>
             </div>
         </div>
