--- a/index.html
+++ b/index.html
@@ -968,8 +968,8 @@
 				<div class="col-sm-8 col-sm-offset-2 mb-50 text-center ">
 					<h1 class="title">Contact Us</h1>
 					<p class="title-lead mt-10 mb-20">Reach out to us</p>
-					<h4 class="gradient-text mt-30" style="font-size: 20px;">Email: <a href="mailto:offdean@iiit-bh.ac.in"><span style="text-transform: lowercase;">offdean@iiit-bh.ac.in</span></a></h4>
-					<h4 class="gradient-text mt-30" style="font-size: 20px;">Phone: <a href="tel:+916742653300"><span style="text-transform: lowercase;">+91 674-2653-300</a></span></h4>
+					<h4 class="gradient-text mt-30" style="font-size: 20px;">Email: <a href="mailto:offdean@iiit-bh.ac.in"><span style="text-transform: lowercase;">odiapreneur@iiit-bh.ac.in</span></a></h4>
+					<!-- <h4 class="gradient-text mt-30" style="font-size: 20px;">Phone: <a href="tel:+916742653300"><span style="text-transform: lowercase;">+91 674-2653-300</a></span></h4> -->
 				</div>
 			</div>
 
@@ -1049,7 +1049,7 @@
 						<div class="col-md-6">
 							<p class="gradient-text" style="font-size: 17px;">Contact: </p>
 							<p class="gradient-text" style="font-size: 17px;">offdean@iiit-bh.ac.in</p>
-							<p class="gradient-text" style="font-size: 17px;">+91 674-2653-300</p>
+							<!-- <p class="gradient-text" style="font-size: 17px;">+91 674-2653-300</p> -->
 
 							<p class="gradient-text" style="font-size: 17px;">Website credits: </p>
 							<ul class="gradient-text" style="font-size: 17px;">
